# devpulse

./: .gitignore  README.md  index.html  minibar.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
extensions/chrome/: background.js  manifest.json  popup.html  popup.js
src/: App.tsx  app.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  models.rs  tray_menu.rs  window_utils.rs
src-tauri/src/automation/: commands.rs  mod.rs  patterns.rs  rules.rs
src-tauri/src/backup/: commands.rs
src-tauri/src/budget/: manager.rs
src-tauri/src/charts/: commands.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/enforcement/: commands.rs  manager.rs
src-tauri/src/export/: commands.rs  exporter.rs  mod.rs
src-tauri/src/goals/: commands.rs  daily_goals.rs  mod.rs  streaks.rs
src-tauri/src/intelligence/: commands.rs  mod.rs  morning_brief.rs  report_card.rs
src-tauri/src/notes/: commands.rs
src-tauri/src/notifications/: manager.rs
src-tauri/src/performance/: cache.rs
src-tauri/src/pomodoro/: commands.rs  mod.rs  timer.rs
src-tauri/src/scheduler/: auto_scheduler.rs  commands.rs  mod.rs  models.rs
src-tauri/src/security/: commands.rs  mod.rs  sanitizer.rs  validator.rs
src-tauri/src/tracker/: categorizer.rs  claude_detector.rs  git_monitor.rs  http_receiver.rs  idle_detector.rs  mod.rs  process_info.rs  project_detector.rs  vscode_detector.rs  window_tracker.rs
(+109 files in other folders)
